--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
                         </label>
                       </div>
                     </div>
+                    <hr>
+                    <div class="form-group">
+                      <label for="comment">備註</label>
+                      <textarea type="text" class="form-control" id="comment" v-model="tempProduct.options"></textarea>
+                    </div>
                   </div>
                 </div>
               </div>
