--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </li>
       </ul>
   </nav>
-  <div class="container-fluid h-100">
+  <div class="container-fluid">
     <div class="row">
       <nav class="col-md-2 d-none d-md-block bg-light sidebar">
         <div class="sidebar-sticky">
@@ -218,10 +218,6 @@
       </main>
     </div>
   </div>
-  <footer class="footer navbar-fixed-bottom bg-light text-muted py-2">
-    <p class="text-center">圖片取自網路</p>
-    <p class="text-center">無商業用途，僅供學習使用</p>
-  </footer>
 </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
