--- a/index.html
+++ b/index.html
@@ -76,34 +76,36 @@
             建立新產品
           </button>
         </div>
-        <table class="table mt-4">
-          <thead>
-            <tr>
-              <th width="120">分類</th>
-              <th>產品名稱</th>
-              <th width="120">原價</th>
-              <th width="120">售價</th>
-              <th width="100">是否啟用</th>
-              <th width="130">編輯</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr v-for="item in products" :key="item.id">
-              <td>{{ item.category }}</td>
-              <td>{{ item.title }}</td>
-              <td>{{ item.origin_price}}</td>
-              <td>{{ item.price}}</td>
-              <td>
-                <span v-if="item.enabled" class="text-success">啟用</span>
-                <span v-else>未啟用</span>
-              </td>
-              <td>
-                <button class="btn btn-outline-primary btn-sm mr-1" @click.prevent="openModal(false, item)">編輯</button>
-                <button class="btn btn-outline-danger btn-sm" @click.prevent="delModal(item)">刪除</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table-responsive">
+          <table class="table table-striped mt-4">
+            <thead>
+              <tr>
+                <th width="130" class="text-nowrap">分類</th>
+                <th>產品名稱</th>
+                <th width="120" class="text-nowrap">原價</th>
+                <th width="120" class="text-nowrap">售價</th>
+                <th width="100" class="text-nowrap">是否啟用</th>
+                <th width="130" class="text-nowrap">編輯</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr v-for="item in products" :key="item.id">
+                <td>{{ item.category }}</td>
+                <td>{{ item.title }}</td>
+                <td>{{ item.origin_price}}</td>
+                <td>{{ item.price}}</td>
+                <td>
+                  <span v-if="item.enabled" class="text-success">啟用</span>
+                  <span v-else>未啟用</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-primary btn-sm mr-1" @click.prevent="openModal(false, item)">編輯</button>
+                  <button class="btn btn-outline-danger btn-sm" @click.prevent="delModal(item)">刪除</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
         <!-- Product Modal -->
         <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
           aria-hidden="true">
