--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <hr>
                     <div class="form-group">
                       <label for="comment">備註</label>
-                      <textarea type="text" class="form-control" id="comment" v-model="tempProduct.options"></textarea>
+                      <textarea type="text" class="form-control" id="comment" v-model="tempProduct.options.comments"></textarea>
                     </div>
                   </div>
                 </div>
